feat: init draw screen effect and particle